Fix a few findbugs errors.